ags (0.7.50)

	* implemented ags_polling_thread.[ch] and ags_poll_fd.[ch]
	* implemented ags_soundcard_get_poll_fd() and ags_soundcard_is_avialable()
	* using AgsPollingThread in ags_soundcard_thread.c and ags_gui_thread.c
	* fixed use of freed string in ags_audio_preferences.c as apply soundcard
	* improved priorities

ags (0.7.49)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed data-race of resetting soundcard device and apply presets
	* improved API reference manual
	* deleted ags_perform_automation_audio.[ch] and ags_perform_automation_audio_run.[ch] because it is not needed, see AgsRecall::automate

ags (0.7.48)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed restart soundcard playback as doing ags_apply_presets_launch()
	* implemented AgsNote in AgsAudioSignal
	* improved gtk-doc related files

ags (0.7.47)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* modified Makefile.am to use -Wformat and -Werror=format-security
	* modified Makefile.am to include docs/images/ags_automation_window_dssi_xsynth.png
	* fixed format security errors

ags (0.7.46)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsMainLoop::interrupt and AgsMainLoop::monitor
	* implemented AgsThread::interrupted and use it in ags_gui_thread.c
	* implemented ags_audio_loop_timing_thread() to emit AgsMainLoop::interrupt
	* fixed configuration in place of AgsSynth and AgsFFPlayer by using AgsSynthGenerator repectively AgsAudioFileLink
	* fixed AgsTactable signals to be emitted
	* fixed configuration in place to reset thread frequency
	* added thread posix signals to AgsGuiThread

ags (0.7.45)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented resetting samplerate, buffer size and format. Thus added properties to AgsAudio and AgsChannel.
	* implemented ags_audio_file_check_suffix() and ags_ipatch_check_suffix()
	* implemented ags_input_open_file()